--- a/index.html
+++ b/index.html
@@ -1,61 +1,67 @@
 <html>
 <head> 
-<title> Aditya Raj - Registration </title>
-<style>
-body {
-text-align: center;
-/* background-color: aqua ; */
-background-image: url('https://wallpapercave.com/wp/wp2649374.jpg') no-repeat center center fixed;
-}
-background-size: cover;
-
-
- .container{
+    <title> Aditya Raj - Registration </title>
+    <style>
+        body {
+            text-align: center;
+            background-image: url('https://wallpapercave.com/wp/wp8363906.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;     }
+        .container {
             max-width: 500px;
-            margin: auto;
-            background-color: transparent;
-            background-filter: blur(20px);
+            min-width: 300px;
+            margin: 50px auto;
+            background-color: rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(20px);
             padding: 30px;
-            border-radius: 8px;
-}
-
-</style>
+            border-radius: 8px;  }
+        .textbox {
+            background: #eaeaea;
+            margin: 15px 0;
+            border-radius: 10px;
+            padding: 8px;
+            display: flex;  }
+        input[type="text"], input[type="email"], input[type="password"], input[type="number"], input[type="date"], input[type="address"], textarea {
+            width: 100%;
+            border: black;
+            background: transparent;
+            background-size: cover;   }
+        select, button {
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;  }
+        textarea {
+            width: 100%;
+            height: 80px;  }
+        .button {
+            margin-top: 20px;  }
+        a {
+            color: #000;
+            font-size: 16px;  }
+    </style>
 </head>
 <body>
-<div class="container">
-<form>
- <h1> Registration Form </h1> 
-<br>
- First Name <br> <input type = "text" placeholder="First Name" name="frame" id="frame"> 
-<br> <br>
- Last Name  <br> <input type = "text" placeholder="Last Name" name="frame" id="frame"> 
-<br> <br>
- Email ID  <br>   <input type = "email" placeholder="aditya@example.com"> 
-<br> <br>
- Password  <br>   <input type = "password" placeholder="password"> 
-<br> <br>
- Confirm Password  <br>   <input type = "password" placeholder="re-enter password"> 
-<br> <br>
-Gender:<br> Male <input type = "radio" name="male"> Female <input type = "radio" name="female"> 
-<br> <br>
-Date Of Birth <br> <input type = "date">
-<br> <br>
-Course <br> <select> 
-<option value="Select Course"> Select Course </option>
-<option value="B.Tech"> B.Tech </option>
-<option value="BCA"> BCA </option>
-<option value="MCA"> MCA </option>
-<option value="MBA"> MBA </option> 
-</select>
-<br><br>
-Contact Number <br> <input type ="number" placeholder="91xxxxxxxxxx" id="phno">
-<br> <br>
-Address <br> <textarea col = "80" row = "10" placeholder="Your Address" id="address"></textarea>
-</form>
-<br>
-<a href="login.html"> Login Here! </a> <br>
-<button value="Submit"> Submit </button>
-</div>
+    <div class="container">
+        <form>
+            <h1> Registration Form </h1> 
+            First Name <div class="textbox">     <input type="text" placeholder="First Name" name="firstName">     </div>
+            Last Name   <div class="textbox">      <input type="text" placeholder="Last Name" name="lastName"> </div>
+            Email ID   <div class="textbox">     <input type="email" placeholder="aditya@example.com" name="email"> </div>
+            Password  <div class="textbox">    <input type="password" placeholder="Password" name="password"> </div>
+            Confirm Password  <div class="textbox">    <input type="password" placeholder="Re-enter password" name="confirmPassword"> </div>
+            Gender: <input type="radio" name="gender" value="male"> Male <input type="radio" name="gender" value="female"> Female       <br><br>
+            Date Of Birth <input type="date" name="dob">    <br><br>
+            Course     <select name="course"> 
+                <option value="Select Course"> Select Course </option>
+                <option value="B.Tech"> B.Tech </option>
+                <option value="BCA"> BCA </option>
+                <option value="MCA"> MCA </option>
+                <option value="MBA"> MBA </option>  </select> <br><br>
+            Contact Number  <div class="textbox">     <input type="number" placeholder="91xxxxxxxxxx" name="contactNumber"> </div>
+            Address   <div class="textbox">  <textarea placeholder="Your Address" name="address"></textarea> </div>
+            <div class="button">    <button type="submit">Submit</button>  </div>
+        </form> 
+        <a href="login.html">Login Here!</a>
+    </div> 
 </body>
 </html>
