--- a/login.html
+++ b/login.html
@@ -1,38 +1,60 @@
 <html>
 <head> 
-<title> Aditya Raj - Login </title>
-<style>
-body {
-text-align: center;
-/* background-color: aqua ; */
-background-image: url('https://wallpapercave.com/wp/wp2649374.jpg') no-repeat center center fixed;
-}
-background-size: cover;
-
-
- .container{
+    <title> Aditya Raj - Login </title>
+    <style>
+        body {
+            text-align: center;
+            background-image: url('https://wallpapercave.com/wp/wp2649374.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+        .container {
             max-width: 500px;
-            margin: auto;
-            background-color: transparent;
-            background-filter: blur(20px);
+            min-width: 300px;
+            margin: 50px auto;
+            background-color: rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(20px);
             padding: 30px;
             border-radius: 8px;
-}
-</style>
+        }
+        .textbox {
+            background: #eaeaea;
+            margin: 15px 0;
+            border-radius: 10px;
+            padding: 8px;
+            display: flex;
+        }
+        input[type="email"], input[type="password"] {
+            width: 100%;
+            border: black;
+            background: transparent;
+        }
+        .button {
+            margin-top: 20px;
+        }
+        a {
+            color: #000;
+            font-size: 16px;
+        }
+    </style>
 </head>
 <body>
-<div class="container">
-<form>
- <h1> Login Form </h1> 
-<br>
- Email ID  <br>   <input type = "email" placeholder="aditya@example.com"> 
-<br> <br>
- Password  <br>   <input type = "password" placeholder="password"> 
-</form>
-<br>
-<a href="index.html"> SignUP Here! </a> <br>
-<button value="Submit"> Submit </button>
-</div>
+    <div class="container">
+        <form>
+            <h1> Login Form </h1>
+            Email ID 
+            <div class="textbox">
+                <input type="email" placeholder="aditya@example.com" name="email">
+            </div>
+            Password 
+            <div class="textbox">
+                <input type="password" placeholder="Password" name="password">
+            </div>
+            <div class="button">
+                <button type="submit">Submit</button>
+            </div>
+        </form>
+        <a href="index.html">Sign Up Here!</a>
+    </div>
 </body>
 </html>
