--- a/hyperlinks.html
+++ b/hyperlinks.html
@@ -2,15 +2,27 @@
     <head>
         <title>Hyperlink</title> 
         <link rel="icon" href="/img/favicon.png">
+        <style>
+            a:link {
+                color: white;
+                background-color: transparent;
+                text-decoration: none;
+            }
+            a:visited {
+                color: lightblue;
+                background-color: transparent;
+                text-decoration:  none;
+            }
+        </style>
     </head>
     <body>
 
-<a href="order.html">CSE</a> <br>
-<a href="order.html">ECE</a> <br>
-<a href="order.html">EEE</a> <br>
-<a href="order.html">M.Tech</a> <br>
-<a href="order.html">Blockchain</a> <br>
-<a href="order.html">Data Science</a> <br>
+<a href="#">CSE</a> <br> <br>
+<a href="#">ECE</a> <br> <br>
+<a href="#">EEE</a> <br> <br>
+<a href="#">M.Tech</a> <br> <br>
+<a href="#">Blockchain</a> <br> <br>
+<a href="#">Data Science</a> <br> <br>
 
     </body>
 </html>
