--- a/cart.html
+++ b/cart.html
@@ -2,15 +2,64 @@
     <head>
         <title>CART</title> 
         <link rel="icon" href="/img/favicon.png">
+        <style> 
+            body {
+                background: linear-gradient(lightblue, white);
+                background-attachment: fixed;
+                margin: 0;
+                padding: 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+                font-family: Arial, sans-serif;
+            }
+            .container {
+                background-color: white;
+                padding: 30px;
+                border-radius: 10px;
+                box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+                text-align: center;
+                max-width: 400px;
+                width: 100%;
+            }
+            h1 {
+                font-size: 2rem;
+                color: #333;
+                margin-bottom: 20px;
+            }
+            .p1 {
+                font-size: 1.2rem;
+                color: #555;
+                margin-bottom: 20px;
+            }
+            .p2 {
+                font-size: 1.2rem;
+                color: #333;
+                margin-bottom: 30px;
+            }
+            button {
+                background-color: #008CBA;
+                color: white;
+                padding: 10px 20px;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+                font-size: 1rem;
+                transition: background-color 0.3s;
+            }
+            button:hover {
+                background-color: #005f73;
+            }
+        </style>
     </head>
     <body>
-<h1> CART </h1>
-<p1>This Page Will Contain All The Items YOU added into Cart!</p1>
-<br> <br>
-<p2>Total Price: 30</p2>
-<br>
-<br>
-<a href="https://rzp.io/i/3BjVjXRpw8"> <button>Pay Now</button> </a>
-
+        <div class="container">
+            <h1>CART</h1>
+            <p class="p1">Your Cart, Pay The Ammount Anyways!</p>
+            <p class="p2">Total Price: $30</p>
+            <a href="index.html">
+                <button>Home</button> </a>
+        </div>
     </body>
 </html>
