--- a/login.html
+++ b/login.html
@@ -1,10 +1,10 @@
 <html>
 <head> 
-    <title> Aditya Raj - Login </title>
+    <title>Login </title>
     <style>
         body {
             text-align: center;
-            background-image: url('img/login.jpg');
+            background-image: url('img/bg.jpg');
             background-size: cover;
             background-repeat: no-repeat;
         }
@@ -29,13 +29,25 @@
             border: black;
             background: transparent;
         }
-        .button {
-            margin-top: 20px;
-        }
+        button {
+                background-color: #008CBA;
+                color: white;
+                padding: 10px 20px;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+                font-size: 1rem;
+                transition: background-color 0.3s;
+            }
+            button:hover {
+                background-color: #005f73;
+            }
         a {
             color: #000;
             font-size: 16px;
         }
+
+       
     </style>
 </head>
 <body>
@@ -56,5 +68,7 @@
         </form>
         <a href="index.html">Sign Up Here!</a>
     </div>
+
+ 
 </body>
 </html>
