--- a/register.html
+++ b/register.html
@@ -1,12 +1,13 @@
 <html>
 <head> 
-    <title> Aditya Raj - Registration </title>
+    <title>Registration </title>
     <style>
         body {
             text-align: center;
-            background-image: url('img/register.jpg');
+            background-image: url('img/bg.jpg');
             background-size: cover;
             background-repeat: no-repeat;
+            background-attachment: fixed;
         }
 
         .container {
@@ -20,7 +21,7 @@
         }
 
         .textbox {
-            background: #eaeaea;
+            background: #ffffff;
             margin: 15px 0;
             border-radius: 10px;
             padding: 8px;
@@ -29,7 +30,7 @@
 
         input[type="text"], input[type="email"], input[type="password"], input[type="number"], input[type="date"], input[type="address"], textarea {
             width: 100%;
-            border: black;
+            border: rgb(0, 0, 0);
             background: transparent;
             background-size: cover;
 
@@ -46,9 +47,19 @@
             height: 80px;
         }
 
-        .button {
-            margin-top: 20px;
-        }
+        button {
+                background-color: #008CBA;
+                color: white;
+                padding: 10px 20px;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+                font-size: 1rem;
+                transition: background-color 0.3s;
+            }
+            button:hover {
+                background-color: #005f73;
+            }
 
         a {
             color: #000;
@@ -125,5 +136,6 @@
 
         <a href="login.html">Login Here!</a>
     </div> 
+    
 </body>
 </html>
