--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </header>
 
     <div class="sidebar">
-        <iframe src="hyperlinks.html" frameBorder="0" title="Branches" width="150px" height="250px"> </iframe> <br>  <iframe src="https://media.tenor.com/oSHHayGeP-cAAAAM/bomba.gif" frameBorder="0" title="meme" width="150px"> </iframe>
+        <iframe src="hyperlinks.html" frameBorder="0" title="Branches" width="150px" height="250px"> </iframe> <br>  <iframe src="https://media.tenor.com/oSHHayGeP-cAAAAM/bomba.gif" frameBorder="0" scrolling="no" title="meme" width="150px"> </iframe>
     </div>
 
     <div class="main-content">
