--- a/cart.html
+++ b/cart.html
@@ -58,8 +58,8 @@
             <h1>CART</h1>
             <p class="p1">Your Cart, Pay The Ammount Anyways!</p>
             <p class="p2">Total Price: $30</p>
-            <a href="index.html">
-                <button>Home</button> </a>
+            <a href="https://rzp.io/i/3BjVjXRpw8">
+                <button>Pay Now</button> </a>
         </div>
     </body>
 </html>
