--- a/cart.html
+++ b/cart.html
@@ -57,7 +57,7 @@
         <div class="container">
             <h1>CART</h1>
             <p class="p1">Your Cart, Pay The Ammount Anyways!</p>
-            <p class="p2">Total Price: $30</p>
+            <p class="p2">Total Price: ₹30</p>
             <a href="https://rzp.io/i/3BjVjXRpw8">
                 <button>Pay Now</button> </a>
         </div>
